fix: Width on small screens

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -2,7 +2,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
-	align-items: start;
+	align-items: flex-start;
 	margin: 0 auto;
 }
 
@@ -10,7 +10,7 @@ main {
 	display: flex;
 	flex-direction: row;
 	justify-content: left;
-	align-items: start;
+	align-items: flex-start;
 	max-width: 50vw;
 	margin: 1rem;
 }
@@ -19,7 +19,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
-	align-items: start;
+	align-items: flex-start;
 }
 
 tr {
@@ -32,4 +32,10 @@ tr:nth-child(odd) {
 
 td {
 	padding: 0.5rem;
+}
+
+@media screen and (max-width: 600px) {
+	.row {
+		max-width: 100%;
+	}
 }
